// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/TIME.proto";
import "../ccsds_mal/UINTEGER.proto";
import "./Pus019EventAction.proto";
import "./PusElement.proto";


package pusGroundModel.protobuf;

message Pus019Model {
extensions 10 to 110;

  optional ccsds_mal.protobuf.UINTEGER serviceStatus = 1;
  optional ccsds_mal.protobuf.UINTEGER noOfEventActions = 2;
  repeated pusGroundModel.protobuf.Pus019EventAction pus19EventAction = 3;
  optional ccsds_mal.protobuf.TIME groundDate = 4;
  optional ccsds_mal.protobuf.UINTEGER apid = 5;
  optional pusGroundModel.protobuf.PusElement pusElement = 6;
  optional ccsds_mal.protobuf.UINTEGER status = 7;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeServiceStatus = 8;
  optional ccsds_mal.protobuf.TIME lastUpdateTimeServiceStatus = 9;
}
